# ti-example-applications

./: Android.mk  Makefile.am  configure.ac
bandwidth-tool/: Android.mk  Dra7xx_ddrstat_speed.c  Makefile.am  statcoll.c  statcoll.h
bandwidth-tool/host/: EMIF_plotter.py  configstat.ini  statcoll_plot.py
cpuload-plugins/: Makefile.am  mpuload.c  pvrscope.cpp  read32k.c  read32k.h  read32k_driver.c  readproc.c  rprocinfo.c  waitforweston.c
cpuload-plugins/scripts/: dummy_boot_time_results.sh  dummy_cpu_load.sh  getFrequency.sh  getTemp.sh  getVoltage.sh  list-boot-times.sh  send_boot_times_to_monitor.sh  soc_performance_monitor.cfg  start_visualization_test.sh
drm-tests/: Makefile.am  buffers.c  buffers.h  drm_clone.c  drm_extended.c  drm_z_alpha.c
graphics/: Makefile.am  simple-egl-readpixels.c
gst/: Makefile.am  gsttestplayer.c
messageq/: README
messageq/configs/: high_40_recv.cfg  high_40_send.cfg  low_1_recv.cfg  low_1_send.cfg  mid_10_recv.cfg  mid_10_send.cfg  mix_5_send_recv.cfg
messageq/messageq_ipc_bios/: ipc-bios.mak  products.mak
messageq/messageq_ipc_linux/: Makefile.am  MessageQZCpy.c  MessageQZeroCpy.c
thermal/: Makefile.am  README.txt  thermal.sh
v4l2-m2m/: Makefile.am  test-v4l2-m2m.c
vip/: Android.mk  Makefile.am  sensor-cfg.c
vpe/: Makefile.am  README  testvpe.c
